<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">MQTT Микрофон</string>
    <string name="settings">Настройки</string>
    <string name="mqtt_settings" translatable="false">MQTT</string>
    <string name="server_address_option">Адрес сервера</string>
    <string name="port_option">Порт для подключения</string>
    <string name="username_option">Имя пользователя</string>
    <string name="password_option">Пароль</string>
    <string name="mic_topic_name_option">Топик для отправки записи</string>
    <string name="dyn_topic_name_option">Топик для получения записи</string>
    <string name="app_settings">Приложение</string>
    <string name="record_mode_option">Режим записи</string>
    <string name="language_option">Язык</string>
    <string name="theme_option">Тема</string>
    <string name="speaking">Говорите</string>
    <string name="recieved_answer">Полученный ответ</string>
    <string name="permission_for_audio_record">Требуется разрешение на запись аудио</string>
    <string name="connection_status_not_connected">Нет подключение</string>
    <string name="connection_status_connection">В процессе подключения</string>
    <string name="connection_status_connected">Подключено</string>
    <string name="connection_status_failed">Сбой при подключении</string>
</resources>