<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/mqtt_settings">

        <EditTextPreference
            app:title="@string/server_address_option"
            app:key="server_address"/>

        <EditTextPreference
            app:title="@string/port_option"
            app:key="port"
            android:inputType="number" />


        <EditTextPreference
            app:title="@string/username_option"
            app:key="username"/>

        <EditTextPreference
            app:title="@string/password_option"
            app:key="password"/>

        <EditTextPreference
            app:title="@string/topic_name_option"
            app:key="topic_name"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/app_settings">

        <ListPreference
            app:title="@string/record_mode_option"
            app:key="record_mode"
            app:entries="@array/record_mode_entries"
            app:entryValues="@array/record_mode_values"
            app:defaultValue="tap"/>

        <ListPreference
            app:title="@string/language_option"
            app:key="language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="system"/>

        <ListPreference
            app:title="@string/theme_option"
            app:key="theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system"/>
    </PreferenceCategory>
</PreferenceScreen>